# kitchen-sink-hs

./: Directories.md  LICENSE  README.md  cabal.project  dominance.md  experiment.cabal  harmonic.ods  hie.yaml  listmonad-unit.md  stack.yaml
autolift/: AutoLift.hs  CHANGELOG.md  LICENSE  autolift.cabal  hie.yaml  test.hs
concrete-category/: CHANGELOG.md  README.md  concrete-category.cabal
concrete-category/src/: Category.hs  FunctorOf.hs
concrete-category/src/Category/: Product.hs  Sum.hs  Trivial.hs  WithOb.hs
concrete-category/src/Concrete/: Category.hs  Decision.hs  FunctorOf.hs  Object.hs  Profunctor.hs  Span.hs
concrete-category/src/Concrete/Category/: Constrained.hs  Discrete.hs  Indiscrete.hs  One.hs  Product.hs  Sum.hs  Untagged.hs  Zero.hs
concrete-category/src/Concrete/Object/: Constrained.hs  Product.hs  Sum.hs
concrete-category/src/Concrete/Profunctor/: Rep.hs  Slice.hs
concrete-category/src/Concrete/Span/: Compose.hs
concrete-category/src/Data/Type/: Relation.hs
concrete-category/src/Type/: Decision.hs
concrete-category/src/Type/Decision/: Eq.hs
data-bag/: data-bag.cabal
data-bag/src/Data/: Bag.hs
data-bag/src/Data/Bag/: Internal.hs
execs/: CHANGELOG.md  execs.cabal  run-perf.sh  run-unzip.sh
execs/conc/: Main.hs
execs/iter/: iter.hs
execs/perf-src/: Runner.hs  bss-poly.hs  bss.hs
execs/readwrite/: readwrite.hs
execs/sequence-m/: Main.hs
execs/unzip-leak/: unzip-test.hs
exetest/: Main.hs  Test.hs  exetest.cabal  stack.yaml  subject
experiment/: experiment.cabal  hie.yaml
experiment/src/: AdHocInstances.hs  AdditionChain.hs  AdditionChains.hs  AmbiguousExistential.hs  Cardinality.hs  Cats.hs  Co.hs  CoerceUnder.hs  Combinatorics.hs  ContAuto.hs  ContEq2.hs  CountCoSemigroup.hs  DifferenceApplicative.hs  Discharge.hs  Distributive.hs  Dsl.hs  EquivalenceUtil.hs  Eyes.hs  FMonad.hs  FMonadExamples.hs  FakeProof.hs  FiniteSet.hs  FreeT_FMonad.md  GenericN.hs  HMatchable.hs  HasseDiagram.hs  Hefty0.hs  HeytingApplicative.hs  Hoard.hs  Hopf.hs  HyperCont.hs  IOCache.hs  Impredic.hs  InfiniteList.hs  InternalCategory.lhs  Isomorphisms.hs  Isomorphisms2.hs  KrohnRhodes.hs  LCS.hs  LatticeLike.hs  (+35 more)
experiment/src/Applicative/: Heyting.hs  Hoard.hs  LmfContainer.hs  MergedHead.hs
experiment/src/Comonad/: Dist.hs  SingleLayer.hs
experiment/src/Data/: FiniteSet.hs  PureSet.hs  Relation.hs
experiment/src/Data/Finite/: Extra.hs
experiment/src/Data/Functor/: Curried.hs  Derivative.hs
experiment/src/Data/PureSet/: Class.hs  Compact.hs  Set.hs  (+1 more)
experiment/src/Finite/: Extra.hs
experiment/src/Lang/: DFA.hs  NFA.hs  RegularExpression.hs
experiment/src/Math/: AAtomicPartition.hs  AdditionChain.hs  BalanceFreePartition.hs  BinaryTreeExpr.hs  Bipartite.hs  Combinatorics.hs  ContingencyTable.hs  CountCoSemigroup.hs  DyckWord.hs  IntegerPartition.hs  KrohnRhodes.hs  Ordinal.hs  QSqrt2.hs
experiment/src/Partial/: Functor.hs  Monad.hs  Monoidal.hs  Poifree.hs
experiment/src/Rank2/: Unzip.hs
experiment/src/Selective/: Night.hs  Prism.hs
functor-monad/: FreeT_FMonad.md  LICENSE  README.md  functor-monad.cabal
functor-monad/examples/: ListTVia.hs
functor-monad/src/: FFunctor.hs  FMonad.hs  ListTVia.hs
functor-monad/src/FMonad/: Compose.hs  FFree.hs  FreeT.hs  State1.hs  Trail.hs
hefty-algebraic/: CHANGELOG.md  hefty-algebraic.cabal
hefty-algebraic/app/: Hefty.hs  Main.hs
hmatchable/: CHANGELOG.md  hmatchable.cabal
hmatchable/app/: Main.hs  Universe.hs
hmatchable/src/Data/: HFix.hs  HFree.hs  HMatchable.hs
lattices/: lattices.cabal  test.hs
lattices-example/: cantor.hs  lattices-example.cabal
lattices/src/: Cantor.hs  FinCoFin.hs  Lattice.hs  POrd.hs
lattices/src/Lattice/: BitSet.hs  Classes.hs  Dual.hs  Ordered.hs
monad-gen/: monad-gen-0.txt  monad-gen-1.txt  monad-gen-2.txt  monad-gen-F.txt  monad-gen-G.txt  monad-gen-H.txt  monad-gen-J.txt  monad-gen-T.txt  monad-gen-W.txt  monad-gen.cabal  monadgen.txt  monadgen_0.txt
monad-gen/src/: .#Enum.hs  Enum1.hs  MonadGen.hs  NatMap.hs  Targets.hs  Util.hs  Vec.hs
monad-gen/src/Enum1/: Extra.hs
monads-collection/: CHANGELOG.md  LICENSE  hie.yaml  monads-collection.cabal
monads-collection/src/: Extrude.hs  MonadLaws.hs
monads-collection/src/Monad/: Builder.hs  Efreet.hs  Esoteric.hs  ExoticCont.hs  FTransducer.hs  FreeAny.lhs  Indexed.hs  ProgramTransducer.hs  Queue.hs  RStore.hs  Ranked.hs  Searchable.hs  SetMonad.hs  ShrinkOnce.hs  SubJump.hs  SuperCont.hs  Trie.hs
monads-collection/test/: BuilderTest.hs  EfreetTest.hs  EsotericTest.hs  QueueTest.hs  RStoreTest.hs  TrieTest.hs
nerdle/: .gitignore  ABOUT  MasterMind.hs  list-mini-nerdle.txt  list-nerdle.txt  micro-nerdle.analyse  mini-nerdle.analyse  nerdle.analyse  nerdle.cabal  test.txt
nerdle/app/: Search.hs  Types.hs  WordleAppCommons.hs  list-nerdle.hs  nerdle-solver.hs  wordle-solver.hs
nerdle/data/: binary-nerdle.analyse  binary-nerdle.words  micro-nerdle.analyse  micro-nerdle.words  mini-binary-nerdle.analyse  mini-binary-nerdle.words  mini-nerdle.analyse  mini-nerdle.words  nerdle.analyse  nerdle.words
nerdle/src/: Digit.hs  EliminationGame.hs  Nerdle.hs  Test.hs  Util.hs  V4.hs  V6.hs  V8.hs  WordleLike.hs
nerdle/src/WordleLike/: Hint.hs
nerdle/wordle-solver/: Collection.hs  GameTree.hs  Search.hs  Util.hs  WordleLike.hs  wordle-solver.hs
perf/: build.sh  cabal.project  perf-issquare.cabal
perf/src/: iamemhn.hs  opt.hs
punctors/: CHANGELOG.md  punctors.cabal
punctors/src/: Punctor.hs
snippets/: snippets.cabal  test-free-ap.ghci
snippets/exec/weakchan/: Chan.hs  Main.hs
snippets/src/: ContEq2.hs  ExcludedMiddle.hs  Impredic.hs  IxEither.hs  NumExpr.hs  OrM.hs  RoleAnnot.hs  Summation.hs  WeakChan.hs
snippets/src/Matrix/: Fold.hs  Sized.hs
snippets/src/QualPolyKind/: A.hs  B.hs
test-mixin/: CHANGELOG.md  Main.hs  test-mixin.cabal
test-mixin/mix-a/: Clash.hs  mix-a.cabal
test-mixin/mix-b/: Clash.hs  mix-b.cabal
test-mixin/mix-c/: Clash.hs  mix-c.cabal
unzip-leak/: .gitignore  LICENSE  unzip-leak.cabal
unzip-leak/src/: Common.hs  unzip-test.hs
(+125 files in other folders)
