name:                experiment
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/experiment#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=2.0
extra-source-files:  README.md

executable experiment
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.10 && < 5
                     , containers
                     , unordered-containers
                     , data-ordlist
                     , array
                     , vector
                     , mtl
                     , random
                     , deepseq
                     , reflection
                     , constraints
                     , contravariant
                     , bifunctors
                     , profunctors
                     , recursion-schemes
                     , pipes
                     , arithmoi
                     , Decimal
                     , integer-logarithms
                     , data-memocombinators
                     , unix
                     , ghc-prim
                     , witherable
                     , these
                     , QuickCheck
  ghc-options:         -Wall -Wcompat

