name:                experiment
version:             0.1.0.0
homepage:            https://github.com/githubuser/experiment#readme
license:             BSD3
license-file:        LICENSE
author:              Koji Miyazato
copyright:           2018-2019 Koji Miyazato
build-type:          Simple
cabal-version:       >=2.0
extra-source-files:  README.md

executable experiment
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.10 && < 5
                       -- Basic techs
                     , mtl
                     , deepseq
                     , QuickCheck
                     , data-memocombinators

                       -- Data Structures
                     , containers
                     , unordered-containers
                     , data-ordlist
                     , array
                     , vector
                     , witherable
                     , these
                     , semialign

                       -- Number Crunching
                     , random
                     , arithmoi
                     , integer-logarithms
                     , Decimal

                       -- Type theories
                     , reflection
                     , constraints
                     , contravariant
                     , bifunctors
                     , profunctors
                     , recursion-schemes

                       -- Low-level
                     , unix
                     , ghc-prim
  ghc-options:         -Wall -Wcompat

