cabal-version:       2.0
name:                autolift
version:             0.1.0.0
synopsis:            Automatic (Show|Read)(1|2)
-- description:
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Koji Miyazato
maintainer:          viercc@gmail.com
-- copyright:
category:            Development
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     AutoLift
  build-depends:       base >=4.12
                     , reflection
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -Wall
