cabal-version:      3.0
name:               concrete-category
version:            0.1.0.0
synopsis:           Yet another representation of categories in Haskell
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Koji Miyazato
maintainer:         viercc@gmail.com
copyright:          (c) Koji Miyazato 2023
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files: README.md
tested-with:        GHC == 9.4.5

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules: 
        Type.Decision,
        Type.Decision.Eq,
        Concrete.Object,
        Concrete.Object.Sum,
        Concrete.Object.Product,
        Concrete.Object.Constrained,
        Concrete.Span,
        Concrete.Span.Compose,
        Concrete.Category,
        Concrete.Category.Zero,
        Concrete.Category.One,
        Concrete.Category.Discrete,
        Concrete.Category.Indiscrete,
        Concrete.Category.Sum,
        Concrete.Category.Product,
        Concrete.Category.Untagged,
        Concrete.Profunctor,
        Concrete.Profunctor.Rep
    -- other-modules:
    -- other-extensions:
    
    build-depends:
      -- GHC-9.2
      base >= 4.16,
      some
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite concrete-category-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        concrete-category
