cabal-version: 2.2
name: execs
version: 0

flag use-integer
  default: False

common ghcopt
  default-language: Haskell2010
  ghc-options: -ddump-to-file -ddump-rule-rewrites
               -rtsopts

common perf
  hs-source-dirs: perf-src
  other-modules:  Runner
  build-depends:  base >= 4.10
  
  if flag(use-integer)
    cpp-options: -DINT_TYPE=Integer

executable conc
  hs-source-dirs:      conc
  main-is:             Main.hs
  build-depends:       base >=4.14
                     , parallel
                     , stm
                     , time
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall -threaded -rtsopts

executable bss
  import: perf, ghcopt
  main-is: bss.hs

executable bss-poly
  import: perf, ghcopt
  main-is: bss-poly.hs

executable iamemhn
  import: perf, ghcopt
  main-is: iamemhn.hs

executable opt
  import: perf, ghcopt
  main-is: opt.hs

executable unzip-list
  import: ghcopt
  hs-source-dirs: unzip-leak
  build-depends:  base >= 4.10, vector
  main-is: unzip-test.hs
  cpp-options: -DUNZIP_FUNCTION=unzipList

executable unzip-fmap
  import: ghcopt
  hs-source-dirs: unzip-leak
  build-depends:  base >= 4.10, vector
  main-is: unzip-test.hs
  cpp-options: -DUNZIP_FUNCTION=unzipFunctor

executable readwrite
  import: ghcopt
  hs-source-dirs: readwrite
  build-depends:  base >= 4.10, process
  main-is: readwrite.hs


executable prof-sequence-m
  import: ghcopt
  hs-source-dirs: sequence-m
  main-is: Main.hs
  build-depends:  base >= 4.10
