cabal-version:       3.0
name:                experiment
version:             0.1.0.0
homepage:            https://github.com/githubuser/experiment#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Koji Miyazato
copyright:           2018-2022 Koji Miyazato
build-type:          Simple
extra-source-files:  README.md

library
  hs-source-dirs:  src
  exposed-modules: AdHocInstances,Heap, 
                   Newtypes, CheapRecord, CoerceUnder,
                   LCS,
                   Co,
                   
                   AdditionChain, Cardinality,
                   KrohnRhodes,
                   Ordinal,

                   DifferenceApplicative,
                   Distributive,

                   HeytingApplicative, HMatchable, Hoard,
                   Rank2Unzip,
                   
                   Partial.Monad,
                   Partial.Monoidal,
                   Partial.Poifree,

                   TheseChain,

                   Selective.Prism, Selective.Night,

                   Data.Set.Extra, Data.PureSet, Data.PureSet.Compact,

                   TreesThatGrow,

                   Isomorphisms, Isomorphisms2,

                   Combinatorics
  build-depends:       base >= 4.10 && < 5
                     , ghc-prim
                     , reflection
                     
                     , containers
                     , data-ordlist
                     , vector
                     , data-memocombinators

                     , integer-logarithms

                     , finitary
                     , finite-typelits

                     , lens
                     , selective
                     , semialign
                     , rank2classes
                     , these
                     
                     , transformers
                     , mtl
                     , free
                     , profunctors
                     , comonad
                     , kan-extensions
                     , hyperfunctions
                     
                     , lattices
  ghc-options:       -Wall -Wcompat
                     -Wunused-packages -Wwarn=unused-packages
  default-language:  Haskell2010
