cabal-version:       3.0
name:                experiment
version:             0.1.0.0
homepage:            https://github.com/githubuser/experiment#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Koji Miyazato
copyright:           2018-2022 Koji Miyazato
build-type:          Simple
extra-source-files:  README.md

library
  hs-source-dirs:  src
  exposed-modules:
    AdHocInstances, AmbiguousExistential,
    Newtypes, Cardinality, CheapRecord, CoerceUnder,
    LCS,
    EquivalenceUtil,
    
    InternalCategory,

    Math.AdditionChain,
    Math.Combinatorics,
    Math.ContingencyTable,
    Math.CountCoSemigroup,
    Math.Ordinal,
    Math.KrohnRhodes,
    Math.Bipartite,

    Hopf,

    Comonad.SingleLayer,
    Comonad.Dist,
    Co,
    FakeProof,

    Applicative.Heyting,
    Applicative.Hoard,
    Applicative.MergedHead,
    Applicative.LmfContainer,

    Rank2.Unzip,
    
    Partial.Monad,
    Partial.Monoidal,
    Partial.Poifree,

    Selective.Prism, Selective.Night,

    Data.Set.Extra,
    Data.PureSet.Set,
    Data.PureSet.Class,
    Data.PureSet.Compact,
    Data.PureSet.Tree,
    
    Data.Functor.Derivative,
    Data.Functor.Curried,

    TreesThatGrow,
    TheseChain,
  build-depends:
      base >= 4.10 && < 5
    , ghc-prim
    , reflection
    
    , containers
    , data-ordlist
    , hashable
    , vector
    , array
    , data-memocombinators
    , equivalence

    , integer-logarithms

    , finitary
    , finite-typelits
    , ghc-typelits-knownnat
    , groups

    , lens
    , selective
    , semialign
    , rank2classes
    , these
    
    , transformers
    , mtl
--                   , free
    , profunctors
    , comonad
    , day-comonoid
    , kan-extensions
    , some
    
    , lattices
  ghc-options:
    -Wall -Wcompat
    -Wunused-packages -Wwarn=unused-packages
  default-language:
    Haskell2010
