cabal-version:       3.0
name:                functor-monad
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Koji Miyazato
copyright:           2018-2022 Koji Miyazato
build-type:          Simple
extra-source-files:  README.md

library
  hs-source-dirs:  src
  exposed-modules: FMonad, FMonadExamples, ListTVia
  build-depends:       base >= 4.10 && < 5
                     , transformers
                     , mtl
                     , free
  ghc-options:       -Wall -Wcompat
                     -Wunused-packages -Wwarn=unused-packages
  default-language:  Haskell2010
