cabal-version:       3.0
name:                functor-monad
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Koji Miyazato
copyright:           2018-2022 Koji Miyazato
build-type:          Simple
extra-source-files:  README.md

library
  hs-source-dirs:  src
  exposed-modules: FFunctor, FMonad, FMonad.Compose, FMonad.FreeT, FMonad.State1,
                   Control.Monad.Trail,
                   
                   Control.Monad.Trans.Free.Extra,
                   Control.Applicative.Trans.FreeAp,
                   Data.Functor.Flip1
  build-depends:       base >= 4.10 && < 5
                     , transformers
                     , kan-extensions
                     , free
  ghc-options:       -Wall -Wcompat
                     -Wunused-packages -Wwarn=unused-packages
  default-language:  Haskell2010

test-suite functor-monad-examples
  type:               exitcode-stdio-1.0
  hs-source-dirs:     examples
  main-is:            ListTVia.hs
  build-depends:      base, transformers, free, functor-monad
  ghc-options:        -Wall -Wwarn=unused-packages
  default-language:   Haskell2010
