cabal-version:      3.0
name:               hefty-algebraic
version:            0.1.0.0
-- synopsis:
-- description:
license:            MPL-2.0
license-file:       LICENSE
author:             Koji Miyazato
maintainer:         viercc@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable hefty-algebraic
    import:           warnings
    main-is:          Main.hs
    other-modules:    Hefty
    -- other-extensions:
    build-depends:
      base ^>=4.18.1.0,
      transformers,
      free
    hs-source-dirs:   app
    default-language: Haskell2010
