cabal-version:      3.0
name:               hmatchable
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Koji Miyazato
maintainer:         viercc@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Data.HMatchable,
        Data.HFix,
        Data.HFree
    build-depends:
        base >=4.14 && <4.20,
        some,
        dependent-map,
        functor-combinators,
        matchable
    hs-source-dirs:   src
    default-language: Haskell2010

executable try-typed-patterns
    import:           warnings
    main-is:          Main.hs
    other-modules:
        Universe
    build-depends:
        base ^>=4.18.1.0,
        functor-combinators,
        hmatchable,
        some,
        dependent-map

    hs-source-dirs:   app
    default-language: Haskell2010
