name:                lattices-example
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=2.0

executable lattices-example-1
  hs-source-dirs:      .
  main-is:             cantor.hs
  build-depends:       base >= 4.7 && < 5,
                       containers, deepseq, intervals, monads-collection, lattices
  default-language:    Haskell2010
  ghc-options:         -Wall -Wno-dodgy-exports

