name:                monad-gen
version:             0
build-type:          Simple
cabal-version:       >=2.0

executable monad-gen
  hs-source-dirs:      src
  main-is:             MonadGen.hs
  other-modules:       Vec, Enum1
  default-language:    Haskell2010
  build-depends:       base >= 4.10 && < 5
                     , vector
                     , mtl
  ghc-options:         -Wall -Wcompat
