cabal-version:       >=1.10
name:                monads-collection
version:             0.1.0.0
synopsis:            Collection of Monads
license-file:        LICENSE
author:              Koji Miyazato
maintainer:          viercc@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md README.md

library
  hs-source-dirs:    src
  exposed-modules:   Monad.Queue,
                     Monad.FreeAny,
                     Monad.Indexed,
                     Monad.Logger,
                     Monad.RStore,
                     Monad.Transducer.Freer,
                     Monad.Transducer.Free,
                     Monad.Searchable,
                     Monad.SetMonad,
                     Monad.ShrinkOnce,
                     Monad.Esoteric,
                     Monad.Builder,
                     Monad.Efreet,
                     Monad.Trie,
                     MonadLaws
  build-depends:     base >=4.11 && <5
                   , containers
                   , mtl
                   , stm
                   , comonad
                   , free
  default-language:  Haskell2010
  ghc-options:       -Wall -Wcompat

test-suite esoteric-test
  type:    exitcode-stdio-1.0
  main-is: EsotericTest.hs
  hs-source-dirs: test
  build-depends: base >=4.11 && <5
               , monads-collection
  default-language: Haskell2010
  ghc-options:      -rtsopts -with-rtsopts=-M64m

test-suite r-store-test
  type:    exitcode-stdio-1.0
  main-is: RStoreTest.hs
  hs-source-dirs: test
  build-depends: base >=4.11 && <5
               , monads-collection
  default-language: Haskell2010
  ghc-options:      -rtsopts -with-rtsopts=-M512m

test-suite efreet-test
  type:    exitcode-stdio-1.0
  main-is: EfreetTest.hs
  hs-source-dirs: test
  build-depends: base >=4.11 && <5
               , monads-collection
  default-language: Haskell2010
  ghc-options:      -rtsopts -with-rtsopts=-M64m

test-suite trie-test
  type:    exitcode-stdio-1.0
  main-is: TrieTest.hs
  hs-source-dirs: test
  build-depends: base >=4.11 && <5
               , monads-collection
  default-language: Haskell2010
  ghc-options:      -rtsopts -with-rtsopts=-M64m

executable monad-queue-test
  main-is: QueueTest.hs
  hs-source-dirs: test
  build-depends: base >=4.11 && <5
               , monads-collection
  default-language: Haskell2010
  ghc-options:      -rtsopts -with-rtsopts=-M2m

executable monad-builder-test
  main-is: BuilderTest.hs
  hs-source-dirs: test
  build-depends: base >=4.11 && <5
               , mtl
               , monads-collection
  default-language: Haskell2010
  ghc-options:      -rtsopts -with-rtsopts=-M64m
  