cabal-version:       2.2
name:                nerdle
version:             0.1.0.0
synopsis:            Analysis of nerdle (and other wordle-like games)
build-type:          Simple
extra-source-files:  ABOUT

library
  hs-source-dirs: src
  exposed-modules: Digit, Collection, Nerdle, EliminationGame, WordleLike
  build-depends: base >= 4.14, containers, vector, semialign, reflection, data-bag
  ghc-options:  -Wall -Wcompat

  default-language: Haskell2010

executable list-nerdle
  hs-source-dirs: app
  main-is: list-nerdle.hs
  build-depends: base >= 4.14, nerdle
  ghc-options: -Wall
  default-language: Haskell2010

executable wordle-solver
  hs-source-dirs: app
  main-is: wordle-solver.hs
  other-modules: WordleAppCommons
  build-depends: base >= 4.14, vector, containers, nerdle
  ghc-options: -Wall
  default-language: Haskell2010
