cabal-version:       2.2
name:                nerdle
version:             0.1.0.0
synopsis:            Analysis of nerdle (and other wordle-like games)
build-type:          Simple
extra-source-files:  ABOUT

executable list-nerdle
  hs-source-dirs: list-nerdle
  main-is: list-nerdle.hs
  other-modules:  Digit, Nerdle
  build-depends: base >= 4.14
  ghc-options: -Wall
  default-language: Haskell2010

executable wordle-solver
  hs-source-dirs: wordle-solver
  main-is: wordle-solver.hs
  other-modules: Collection, WordleLike, Types, Util, Search
  build-depends: base >= 4.14,
                 vector, containers, data-bag,
                 semialign,
                 reflection,
                 random,
                 deepseq
  ghc-options: -Wall
  default-language: Haskell2010
