cabal-version:      3.4
name:               punctors
version:            0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
author:             Koji Miyazato
maintainer:         viercc@gmail.com
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    hs-source-dirs:   src
    exposed-modules:  Punctor
    build-depends:    base >= 4.14
    default-language: Haskell2010
