cabal-version:       3.0
name:                snippets
version:             0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Koji Miyazato
copyright:           2021-2022 Koji Miyazato
build-type:          Simple

library
  hs-source-dirs:  src
  exposed-modules: 
    QualPolyKind.A, QualPolyKind.B,
    PolyEq,
    Readerize,
    Summation,
    LogRwd,
    OrM,
    NumExpr,
    ContEq2,
    Impredic
  build-depends:       base >= 4.10 && < 5
                     , containers
                     , data-ordlist
                     , vector
                     , transformers
                     , mtl
                     , free
  ghc-options:       -Wall -Wcompat
                     -Wunused-packages -Wwarn=unused-packages
  default-language:  Haskell2010