cabal-version:       >=1.10
name:                test-mixin
version:             0.1.0.0
author:              Koji Miyazato
maintainer:          viercc@gmail.com
build-type:          Simple

executable test-mixin
  main-is:             Main.hs
  build-depends:       base >=4.13, mix-a, mix-b, mix-c
  hs-source-dirs:      .
  default-language:    Haskell2010

