cabal-version:       >=1.10
name:                mix-a
version:             0.1.0.0
author:              Koji Miyazato
maintainer:          viercc@gmail.com
build-type:          Simple

library
  build-depends:       base >=4.13
  hs-source-dirs:      .
  exposed-modules:     Clash
  default-language:    Haskell2010

